--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,19 +1,22 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="#">Dating App</a>
-        <ul class="navbar-nav mr-auto"  *ngIf="accountService.currentUser$ |async">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Matches</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Lists</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link">Message</a>
-            </li>
+        <a class="navbar-brand" routerLinkActive="active" routerLink="/">Dating App</a>
+        <ul class="navbar-nav mr-auto" >
+            <ng-container *ngIf="accountService.currentUser$ |async">
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActive="active" routerLink="/members">Matches</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActive="active" routerLink="/lists">Lists</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActive="active" routerLink="/messages">Message</a>
+                </li>
+            </ng-container>
+
         </ul>
-        <div class="dropdown"  *ngIf="accountService.currentUser$ |async" dropdown>
-            <a class=" dropdown-toggle text-light" dropdownToggle>Welcome User</a>
+        <div class="dropdown" *ngIf="(accountService.currentUser$ |async )as user" dropdown>
+            <a class=" dropdown-toggle text-light" dropdownToggle>Welcome {{user.username| titlecase}}</a>
             <div class="dropdown-menu mt-3" *dropdownMenu>
                 <a class="dropdown-item">Edit Profile</a>
                 <div class="dropdown-divider"></div>
@@ -21,13 +24,13 @@
             </div>
 
         </div>
-        <form *ngIf="(accountService.currentUser$ |async)===null" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()"
-            autocomplete="off">
+        <form *ngIf="(accountService.currentUser$ |async)===null" #loginForm="ngForm" class="form-inline mt-2 mt-md-0"
+            (ngSubmit)="login()" autocomplete="off">
             <input class="form-control mr-sm-2" type="text" placeholder="UserName" name="username"
                 [(ngModel)]="model.username">
             <input class="form-control mr-sm-2" type="password" placeholder="Password" name="password"
                 [(ngModel)]="model.password">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+            <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
         </form>
     </div>
 </nav>
