--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -10,8 +10,9 @@
                     <a class="nav-link" routerLinkActive="active" routerLink="/lists">Lists</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLinkActive="active" routerLink="/messages">Message</a>
+                    <a class="nav-link" routerLinkActive="active" routerLink="/errors">Errors</a>
                 </li>
+
             </ng-container>
 
         </ul>
