--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,1 +1,64 @@
-<p>member-detail works!</p>
+<div class="row" *ngIf="member">
+    <div class="col-4">
+        <div class="card">
+            <img src="{{member.photoUrl || '.assests/user.png'}}" alt="{{member.KnownAs}}"
+                class="card-img-top img-thumbnail">
+            <div class="card-body">
+                <div>
+                    <strong>Location :</strong>
+                    <p>
+                        {{member.city}}, {{member.country}}
+                    </p>
+                </div>
+                <div>
+                    <strong>Age :</strong>
+                    <p>
+                        {{member.age}}
+                    </p>
+                </div>
+                <div>
+                    <strong>Last Active :</strong>
+                    <p>
+                        {{member.lastActive}}
+                    </p>
+                </div>
+                <div>
+                    <strong>Member Since :</strong>
+                    <p>
+                        {{member.created}}
+                    </p>
+                </div>
+            </div>
+            <div class="card-footer">
+                <div class="btn-group d-flex">
+                    <button class="btn btn-primary">Like</button>
+                    <button class="btn btn-success">Message</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-8">
+        <tabset class="member-tabset">
+            <tab heading="about  {{member.knownAs}}">
+                <h4>Description</h4>
+                <p>{{member.introduction}}</p>
+                <h4>Looking For</h4>
+                <p>{{member.lookingFor}}</p>
+            </tab>
+
+            <tab heading="Intetests">
+                <h4>Intetests</h4>
+                <p>{{member.intetests}}</p>
+            </tab>
+
+            <tab heading="Photos">
+                <ngx-gallery [options]="galleryOptions" [images]="galleryImages"
+                    style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
+            </tab>
+
+            <tab heading="Messages">
+                <p>Message Will go here</p>
+            </tab>
+        </tabset>
+    </div>
+</div>
