--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -39,17 +39,18 @@
     </div>
     <div class="col-8">
         <tabset class="member-tabset">
-            <tab heading="about  {{member.knownAs}}">
+            <tab heading="About  {{member.knownAs}}">
                 <h4>Description</h4>
                 <p>{{member.introduction}}</p>
                 <h4>Looking For</h4>
                 <p>{{member.lookingFor}}</p>
             </tab>
 
-            <tab heading="Intetests">
-                <h4>Intetests</h4>
-                <p>{{member.intetests}}</p>
+            <tab heading="Interests">
+                <h4>Interests</h4>
+                <p>{{member.intersets}}</p>
             </tab>
+
 
             <tab heading="Photos">
                 <ngx-gallery [options]="galleryOptions" [images]="galleryImages"
