--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -38,7 +38,8 @@
                 </div>
             </div>
             <div class="card-footer">
-                <button [disabled]="!(editForm.dirty)" form="editForm" type="submit" class="btn btn-success btn-block">Save Changes</button>
+                <button [disabled]="!(editForm.dirty)" form="editForm" type="submit"
+                    class="btn btn-success btn-block">Save Changes</button>
             </div>
         </div>
     </div>
@@ -65,8 +66,7 @@
             </tab>
 
             <tab heading="Edit Photos">
-
-                <p>photos edit here</p>
+                <app-photo-editor  [member]="member"></app-photo-editor>
             </tab>
 
 
