--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,7 +1,7 @@
 <div class="row" *ngIf="member">
     <div class="col-4">
         <div class="card">
-            <img src="{{member.photoUrl || '.assests/user.png'}}" alt="{{member.KnownAs}}"
+            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.KnownAs}}"
                 class="card-img-top img-thumbnail">
             <div class="card-body">
                 <div>
