--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="col-4">
         <div class="card">
-            <img src="{{member.photoUrl || '.assests/user.png'}}" alt="{{member.KnownAs}}"
+            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.KnownAs}}"
                 class="card-img-top img-thumbnail">
             <div class="card-body">
                 <div>
@@ -66,7 +66,7 @@
             </tab>
 
             <tab heading="Edit Photos">
-                <app-photo-editor  [member]="member"></app-photo-editor>
+                <app-photo-editor [member]="member"></app-photo-editor>
             </tab>
 
 
