--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -19,13 +19,13 @@
                 <div>
                     <strong>Last Active :</strong>
                     <p>
-                        {{member.lastActive}}
+                        {{member.lastActive | timeago}}
                     </p>
                 </div>
                 <div>
                     <strong>Member Since :</strong>
                     <p>
-                        {{member.created}}
+                        {{member.created | date}}
                     </p>
                 </div>
             </div>
