--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -25,6 +25,16 @@
         </div>
         <button class="btn btn-success ml-1" type="submit">Apply Filters</button>
         <button (click)="resetFilters()" class="btn btn-primary ml-1" type="submit">Reset Filters</button>
+        <div class="col">
+            <div class="btn-group float-right">
+                <button class="btn btn-primary" type="button" name="orderBy" btnRadio="lastActive"
+                    [(ngModel)]="userParams.orderBy" (click)="loadMembers()"> Last Active</button>
+                <button class="btn btn-primary" type="button" name="orderBy" btnRadio="created"
+                    [(ngModel)]="userParams.orderBy" (click)="loadMembers()"> Newest Memebers</button>
+            </div>
+        </div>
+
+
     </form>
 </div>
 
