--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -10,7 +10,7 @@
                 <button class="btn btn-primary" (click)="addLike(member)"><i class="fa fa-heart"></i></button>
             </li>
             <li class="list-inline-item">
-                <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
+                <button class="btn btn-primary"  [queryParams]="{tab:3}" routerLink="/members/{{member.username}}"><i class="fa fa-envelope"></i></button>
             </li>
         </ul>
     </div>
