--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -12,6 +12,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLinkActive="active" routerLink="/messages">Messages</a>
                 </li>
+                <li *appHasRole='["Admin","Moderator"]' class="nav-item">
+                    <a class="nav-link" routerLinkActive="active" routerLink="/admin">Admin</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLinkActive="active" routerLink="/errors">Errors</a>
                 </li>
@@ -21,7 +24,8 @@
         </ul>
         <div class="dropdown" *ngIf="(accountService.currentUser$ |async )as user" dropdown>
             <img src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.username}}">
-            <a class=" dropdown-toggle text-light ml-2" dropdownToggle>Welcome {{user.knownAs| titlecase}}</a>
+            <a class=" dropdown-toggle text-light ml-2" dropdownToggle>Welcome {{user.knownAs|| user.username|
+                titlecase}}</a>
             <div class="dropdown-menu mt-3" *dropdownMenu>
                 <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
                 <div class="dropdown-divider"></div>
