--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -10,12 +10,16 @@
                 <button class="btn btn-primary" (click)="addLike(member)"><i class="fa fa-heart"></i></button>
             </li>
             <li class="list-inline-item">
-                <button class="btn btn-primary"  [queryParams]="{tab:3}" routerLink="/members/{{member.username}}"><i class="fa fa-envelope"></i></button>
+                <button class="btn btn-primary" [queryParams]="{tab:3}" routerLink="/members/{{member.username}}"><i
+                        class="fa fa-envelope"></i></button>
             </li>
         </ul>
     </div>
     <div class="card-body p-1">
-        <h6 class="card-title text-center mb-1"><i class="fa fa-user mr-2"></i>
+        <h6 class="card-title text-center mb-1">
+            <span [class.is-online]="(presence.onlineUsers$ | async).includes(member.username)">
+                <i class="fa fa-user mr-2"></i>
+            </span>
             {{member.knownAs}},{{member.age}}
         </h6>
         <p class="card-text text-muted text-center">{{member.city}}</p>
