--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -3,7 +3,8 @@
         <div *ngIf="(messageService.messageThread$ | async)?.length === 0">
             No message yet---
         </div>
-        <ul *ngIf="(messageService.messageThread$ | async).length > 0">
+        <ul #scrollMe style="overflow:scroll;height: 500px;" *ngIf="(messageService.messageThread$ | async).length > 0"
+            [scrollTop]="scrollMe.scrollHeight" class="chat">
             <li *ngFor="let message of (messageService.messageThread$ | async)">
                 <div>
                     <span class="chat-img float-right">
@@ -30,7 +31,6 @@
 
 
                 </div>
-                <hr>
             </li>
         </ul>
     </div>
