--- a/client/src/app/admin/admin-panel/admin-panel.component.html
+++ b/client/src/app/admin/admin-panel/admin-panel.component.html
@@ -8,7 +8,7 @@
         </tab>
         <tab heading="Photo Management" *appHasRole="['Admin','Moderator']">
             <div class="container">
-                <app-user-management></app-user-management>
+                <app-photo-management><p>jj</p></app-photo-management>
             </div>
         </tab>
     </tabset>
