--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -1,10 +1,14 @@
 <div class="row">
-    <div class="col-2" *ngFor="let photo of member.photos">
-        <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-1">
+    <div class="col-2 img-wrapper" *ngFor="let photo of member.photos">
+        <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-1" [class.not-approved]="!photo.isApproved">
+        <div class="img-text col-sm " *ngIf="!photo.isApproved">
+            <span class="text-danger  " >Awaiting approval</span>
+        </div>
         <div class="text-center">
-            <button [disabled]="photo.isMain" (click)="setMainPhoto(photo)"
-                [ngClass]='photo.isMain ? "btn-success active":"btn-outline-success"' class="btn btn-sm">Main</button>
-            <button [disabled]="photo.isMain" (click)="deletePhoto(photo.id)" class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
+            <button [disabled]="photo.isMain || !photo.isApproved" (click)="setMainPhoto(photo)"
+                [ngClass]='photo.isMain ? "btn-success active" : "btn-outline-success"' class="btn btn-sm">Main</button>
+            <button [disabled]="photo.isMain" (click)="deletePhoto(photo.id)" class="btn btn-sm btn-danger"><i
+                    class="fa fa-trash"></i></button>
         </div>
     </div>
 </div>
@@ -70,7 +74,3 @@
                 <span class="fa fa-trash"></span> Remove all
             </button>
         </div>
-
-    </div>
-
-</div>
