--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -6,7 +6,7 @@
         <ul *ngIf="(messageService.messageThread$ | async).length > 0" class="chat">
             <li *ngFor="let message of (messageService.messageThread$ | async)">
                 <div>
-                    <span class="chat-img float-right">
+                    <span class="chat-img float-end">
                         <img class="rounded-circle" src="{{message.senderPhotoUrl || './assets/user.png'}}"
                             alt="{{message.senderUserName}}">
                     </span>
