--- a/client/src/app/admin/user-management/user-management.component.html
+++ b/client/src/app/admin/user-management/user-management.component.html
@@ -1,11 +1,13 @@
 <div class="row">
     <table class="table">
-        <tbody>
+        <thead>
             <tr>
                 <th style="width: 30%;">Username</th>
                 <th style="width: 40%;">Active Roles</th>
                 <th style="width: 30%;"></th>
             </tr>
+        </thead>
+        <tbody>
             <tr *ngFor="let user of users">
                 <td>{{user.username}}</td>
                 <td>{{user.roles}}</td>
