--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,7 +3,7 @@
         <h1>Find your Match</h1>
         <p class="lead">Come on it to view your matches ... all you need to do is sign up!</p>
         <div class="text-center">
-            <button class="btn btn-primary btn-lg mr-2" (click)="registerToggle()">Register</button>
+            <button class="btn btn-primary btn-lg me-2" (click)="registerToggle()">Register</button>
             <button class="btn btn-info btn-lg">Learn More</button>
         </div>
     </div>
