--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -2,7 +2,7 @@
     <h2>{{predicate === 'liked'? 'Members I like':'Members who like me'}}</h2>
 </div>
 <div class="container mt-3">
-    <div class="row">
+    <div class="d-flex">
         <div class="btn-group" name="predicate">
             <button class="btn btn-primary" btnRadio="liked" [(ngModel)]="predicate" (click)="loadLikes()">Member I
                 Like</button>
