--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -2,31 +2,31 @@
     <h2>Your Matches - {{pagination?.totalItems}} Found</h2>
 </div>
 <div class="containers mt-3">
-    <form #form="ngForm" class="form-inline mb-3" (ngSubmit)="loadMembers()" autocomplete="off">
-        <div class="form-group">
-            <label>
+    <form #form="ngForm" class="d-flex mb-3" (ngSubmit)="loadMembers()" autocomplete="off">
+        <div class="d-flex mx-2">
+            <label class="col-form-label me-2">
                 Age From :
             </label>
             <input type="number" class="form-contol ml-1" style="width: 70px;" name="minAge"
                 [(ngModel)]="userParams.minAge">
         </div>
-        <div class="form-group px-2">
-            <label>
+        <div class="d-flex px-2">
+            <label class="col-form-label me-2">
                 Age To :
             </label>
             <input type="number" class="form-contol ml-1" style="width: 70px;" name="maxAge"
                 [(ngModel)]="userParams.maxAge">
         </div>
-        <div class="form-group px-2">
-            <label>Show :</label>
+        <div class="d-flex px-2">
+            <label class="col-form-label me-2">Show :</label>
             <select name="gender" style="width: 130px;" class="form-control ml-1" [(ngModel)]="userParams.gender">
                 <option *ngFor="let gender of genderList" [value]="gender.value">{{gender.display}}</option>
             </select>
         </div>
-        <button class="btn btn-success ml-1" type="submit">Apply Filters</button>
-        <button (click)="resetFilters()" class="btn btn-primary ml-1" type="submit">Reset Filters</button>
+        <button class="btn btn-primary ms-1" type="submit">Apply Filters</button>
+        <button (click)="resetFilters()" class="btn btn-info ms-1" type="submit">Reset Filters</button>
         <div class="col">
-            <div class="btn-group float-right">
+            <div class="btn-group float-end">
                 <button class="btn btn-primary" type="button" name="orderBy" btnRadio="lastActive"
                     [(ngModel)]="userParams.orderBy" (click)="loadMembers()"> Last Active</button>
                 <button class="btn btn-primary" type="button" name="orderBy" btnRadio="created"
