--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -1,14 +1,14 @@
 <div class="row">
-    <div class="col-2 img-wrapper" *ngFor="let photo of member.photos">
+    <div class="col-2 d-flex flex-column" *ngFor="let photo of member.photos">
         <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-1" [class.not-approved]="!photo.isApproved">
         <div class="img-text col-sm " *ngIf="!photo.isApproved">
             <span class="text-danger  " >Awaiting approval</span>
         </div>
-        <div class="text-center">
+        <div class="d-flex">
             <button [disabled]="photo.isMain || !photo.isApproved" (click)="setMainPhoto(photo)"
-                [ngClass]='photo.isMain ? "btn-success active" : "btn-outline-success"' class="btn btn-sm">Main</button>
-            <button [disabled]="photo.isMain" (click)="deletePhoto(photo.id)" class="btn btn-sm btn-danger"><i
-                    class="fa fa-trash"></i></button>
+                [ngClass]='photo.isMain ? "btn-success active" : "btn-outline-success"' class="btn btn-sm flex-grow-1">Main</button>
+            <button [disabled]="photo.isMain" (click)="deletePhoto(photo.id)" class="btn btn-sm btn-danger flex-grow-1"><i
+                    class="fa fa-trash "></i></button>
         </div>
     </div>
 </div>
