--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,13 +1,13 @@
 <form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && register()" autocomplete="off">
     <h2 class="text-center text-primary">Sign Up</h2>
     <hr>
-    <div class="form-group">
-        <label for="" class="control-label" style="margin: right 10px; ;">I am a </label>
-        <label for="" class="radio-inline">
-            <input type="radio" value="male" formControlName="gender" class="ml-3"> Male
+    <div class="mb-3">
+        <label for="" style="margin-right :10px;">I am a </label>
+        <label for="" class="form-check-label">
+            <input class="form-check-input" type="radio" value="male" formControlName="gender" > Male
         </label>
-        <label for="" class="radio-inline">
-            <input type="radio" value="female" formControlName="gender" class="ml-3"> Female
+        <label for="" class="form-check-label">
+            <input type="radio" value="female" formControlName="gender" class="form-check-input ms-3"> Female
         </label>
     </div>
     <app-text-input [formControl]="registerForm.controls['username']" [label]='"Username"' [type]='"text"'>
